# PiscineCyberSec

Cyber00/: Spider.py  spider.py
Cyber00/nginx/static/: 2.html  4.html
Cyber01/: scorpion.py
Stockholm/python/: Makefile  Stockholm.py  wannacry_known_extensions.txt
Stockholm/rust/chacha20_test/: Cargo.toml
Stockholm/rust/chacha20_test/src/: main.rs
arachnida/spider/: Spider.py  spider.py
arachnida/spider/nginx/static/: 3.html  5.html  index.html
ft_onion/: Dockerfile  index.html  instructions.txt  sshd_config
ft_onion/nginx/: index.html
ft_otp/: ft_otp.key  ft_otp.py  key.hex  private.pem  public.pem  test.py
reverse_me/level1/: a.out  source.c
reverse_me/level2/: asm_dump  source.c
