[package]
name = "chacha20_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20 = "0.9.1"
clap = { version = "4.5.31", features = ["derive"] }
glob = "0.3.2"
hmac = "0.12.1"
sha2 = "0.10.8"
